# TalkType

./: .gitignore  APPIMAGE.md  APPIMAGEHUB_STATUS.md  APPIMAGEHUB_SUBMISSION.md  APPIMAGE_README.md  ATSPI_INTEGRATION_SUMMARY.md  AppImageBuilder.yml  AppRun  BUILD_APPIMAGE.md  BUILD_SCRIPTS.md  CAIRO_ERROR_PROBLEM.md  CAIRO_FILES_COMPARISON.md  CAIRO_FIX_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CLAUDE_RULES.md  CLEANUP_SUMMARY.md  CROSS_PLATFORM_PORTING_GUIDE.md  DEVELOPMENT_PLAN.md  DEVELOPMENT_SEPARATION.md  DEV_NOTES.md  DEV_SETUP.md  Dockerfile.build  FLATPAK.md  GEMINI.md  GNOME_EXTENSION_FIXES_NEEDED.md  GNOME_EXTENSION_IDEAS.md  ICON_DOCUMENTATION.md  IMAGE_GENERATION_TOOLS.md  LICENSE  MARKETING_PLAN.md  MCP_SCREENSHOT_USAGE.md  MCP_SERVER_DEBUG_SUMMARY.md  NEXT_SESSION.md  NO_PREINSTALL_BUNDLING_NOTES.md  README.md  README_DEV.md  REPOSITORY_STRUCTURE.md  RESTORE_WORKING.md  ROADMAP.md  (+73 more)
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
AppDir/: .DirIcon  AppRun  TalkType.desktop  talktype.desktop
aur/: .SRCINFO  PKGBUILD  talktype.desktop
docker-testing/: Dockerfile.gnome  Dockerfile.kde  Dockerfile.xfce  README.md  build-all.sh  generate-comparison-report.sh  run-tests.sh  test-runner.sh
gnome-extension/: README.md
gnome-extension/talktype@ronb1964.github.io/: extension.js  metadata.json  stylesheet.css
old-build-scripts/: build-appimage-clean.sh  build-appimage-docker.sh  build-appimage-fast.sh  build-appimage-release.sh  build-appimage.sh  build-ubuntu20-fast.sh  build-ubuntu20.sh
review_bundle/AppDir/usr/: pyvenv.cfg
review_bundle/AppDir/usr/src/ron_dictation/: config.py
scripts/: safe-appimage-build.sh
squashfs-root/: .DirIcon  AppRun
squashfs-root/usr/share/metainfo/: io.github.ronb1964.TalkType.appdata.xml
squashfs-root/usr/src/talktype/: app.py  config.py  cuda_helper.py  logger.py  normalize.py  prefs.py  prefs.py.original  torch_init.py  tray.py
src/ron_dictation/: app.py  config.py  normalize.py  prefs.py  tray.py
src/talktype/: __init__.py  app.py  atspi_helper.py  config.py  cuda_helper.py  dbus_service.py  desktop_detect.py  download_progress_dialog.py  download_utils.py  extension_helper.py  help_dialog.py  logger.py  model_helper.py  normalize.py  prefs.py  prefs_git_backup.py  prefs_main.py  prefs_manual.py  prefs_style.css  recording_indicator.py  torch_init.py  tray.py  uinput_helper.py  undo.py  update_checker.py  voice_commands_dialog.py  welcome_dialog.py
test-screenshots/: comparison-report.html
tests/: test_config.py  test_cuda_helper.py  test_download_utils.py  test_logger.py  test_normalize.py  test_prefs_logic.py  test_undo.py  test_version.py
