[tool.poetry]
name = "talktype"
version = "0.2.1"
description = "Press-and-hold dictation for Wayland (F8), Faster-Whisper + ydotool, with smart punctuation."
authors = ["Ron"]
license = "MIT"
readme = "README.md"
packages = [{ include = "talktype", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
faster-whisper = "*"
sounddevice = "*"
evdev = "*"
numpy = "*"
pyperclip = "*"
pygobject = "^3.52.3"
toml = "*"
torch = {version = "^2.6.0+cu124", source = "pytorch"}
torchvision = {version = "^0.21.0+cu124", source = "pytorch"}
torchaudio = {version = "^2.6.0+cu124", source = "pytorch"}

[tool.poetry.scripts]
dictate-tray = "talktype.tray:main"
dictate = "talktype.app:main"
dictate-prefs = "talktype.prefs:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
black = "^25.1.0"
ruff = "^0.12.9"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E","F","I"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
